# LMS-AI-Chatbot

./: .gitignore  README.md  angular.json  docker-compose.yml  package-lock.json  package.json  server.js  start-all.bat
.copilot/: README.md  agents.json
.github/: copilot-instructions.md
backend/: .gitignore  BACKEND_START_HERE.md  pom.xml
daily_update_automation/: daily_update.py  daily_update_excel.ps1  daily_updates.xlsx  setup_scheduler.ps1
docs/: 00_READ_ME_FIRST.txt  API_DOCUMENTATION.md  AZURE_DEPLOYMENT.md  BACKEND_SETUP.md  BEFORE_AFTER_EXAMPLES.md  CHATBOT_PROJECT_SUMMARY.md  CHATBOT_README.md  CHAT_CUSTOMIZATION_DIAGNOSTICS.md  CMakeLists.txt  COMMAND_REFERENCE.md  COMPLETE_TEST_GUIDE.md  DASHBOARD_FIX_COMPLETED.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_STATUS.md  DEPLOY_NO_DOCKER.txt  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  FINAL_VERIFICATION_REPORT.md  FRONTEND_SETUP.md  GETTING_STARTED.md  GIT_INTEGRATION_README.md  INTEGRATION_GUIDE.md  LMS_COMPLETE_SYSTEM_GUIDE.md  OFFLINE_SETUP.md  OPTIMIZATION.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_INDEX.md  OPTIMIZATION_QUICK_REF.md  OPTIMIZATION_SUMMARY.txt  PROJECT_COMPLETE_INDEX.md  PROJECT_IS_COMPLETE.md  PROJECT_SETUP_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_TEACHER_DASHBOARD.md  README_COMPLETE.md  READY_TO_USE.md  REPLIT_DEPLOYMENT_GUIDE.md  REPLIT_QUICK_START.txt  (+28 more)
frontend/: .gitignore  (+2 more)
frontend-chatbot/: .env.local.example  CHATBOT_START_HERE.md  Dockerfile  FILE_ORGANIZATION.md  README-DEMO-MODE.md  launch.ps1  package-lock.json  package.json  setup-api-key.bat
(+126 files in other folders)
